--- a/podfile
+++ b/podfile
@@ -4,7 +4,9 @@ inhibit_all_warnings!
 use_frameworks!
 
 target 'MySwiftApp' do
+    
 pod 'Alamofire', '~> 4.0'
+pod 'Kingfisher', '~> 3.0'
 
 end
 
