add SnapKit and modify header

--- a/podfile
+++ b/podfile
@@ -1,5 +1,5 @@
+source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, ’10.0’
-
 inhibit_all_warnings!
 use_frameworks!
 
@@ -7,6 +7,7 @@ target 'MySwiftApp' do
     
 pod 'Alamofire', '~> 4.0'
 pod 'Kingfisher', '~> 3.0'
+pod 'SnapKit', '~> 3.0.2'
 
 end
 
